@@ -2,7 +2,6 @@ package Streams;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.*;
 
 public class EvenNumber {
     public static void main(String[] args) {
@@ -10,7 +9,7 @@ public class EvenNumber {
 
         List<Integer> even = numbers.stream()
                 .filter(n -> n % 2 == 0)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Even Numbers: " + even);
     }
