@@ -1,7 +1,7 @@
 package Streams;
 
 import java.util.*;
-import java.util.stream.*;
+
 public class SortedAlp {
     public static void main(String[] args) {
         List<String> names = Arrays.asList("Arun", "Zara", "John", "Anita", "Bob");
@@ -9,7 +9,7 @@ public class SortedAlp {
         List<String> firstThree = names.stream()
                 .sorted()
                 .limit(3)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("First 3 Sorted Names: " + firstThree);
     }
